--- a/css/custom.css
+++ b/css/custom.css
@@ -252,7 +252,7 @@
     position: relative;
     display: block;
     box-sizing: content-box;
-    width: 90px;
+    width: 64px;
     /* height: 26px;
     border-radius: 100%; */
     border: none;
@@ -280,6 +280,8 @@
   .appointment span {
     /* display: block; */
     position: relative;
+    font-size: small;
+    margin-left: -5px;
     /* z-index: 3;
     width: 0;
     height: 0;
@@ -436,3 +438,7 @@ padding: 2rem !important;
   outline: 1px solid darkgreen;
   border-radius: 8px;
 }
+
+
+
+/* responsive */
