--- a/css/custom.css
+++ b/css/custom.css
@@ -296,6 +296,58 @@
   border-radius: 5px;
 }
 
+
+
+
+.feedback{
+  position: relative;
+  display: block;
+  box-sizing: content-box;
+  width: 110px;
+  margin-left: 170px;
+  /* height: 26px;
+  border-radius: 100%; */
+  border: none;
+  outline: none !important;
+  padding: 18px 20px 20px 28px;
+  /* background: var(--primary); */
+
+}
+
+.feedback:before {
+  content: "";
+  position: absolute;
+  z-index: 0;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  display: block;
+  width: 90px;
+  height: 60px;
+  background:#157347;
+  /* border-radius: 100%; */
+  animation: pulse-border 1500ms ease-out infinite;
+}
+
+.feedback span {
+  /* display: block; */
+  position: relative;
+  /* font-size: small; */
+  margin-left: -5px;
+  /* z-index: 3;
+  width: 0;
+  height: 0;
+  left: -1px;
+  border-left: 16px solid #FFFFFF;
+  border-top: 11px solid transparent;
+  border-bottom: 11px solid transparent; */
+}
+
+.feedback-form{
+
+border-radius: 5px;
+}
+
 .small-device{
   margin-right: 22px;
   font-size: 21px;
