--- a/css/custom.css
+++ b/css/custom.css
@@ -252,7 +252,7 @@
     position: relative;
     display: block;
     box-sizing: content-box;
-    width: 64px;
+    /* width: 64px; */
     /* height: 26px;
     border-radius: 100%; */
     border: none;
@@ -280,8 +280,8 @@
   .appointment span {
     /* display: block; */
     position: relative;
-    font-size: small;
-    margin-left: -5px;
+    /* font-size: small; */
+    /* margin-left: -5px; */
     /* z-index: 3;
     width: 0;
     height: 0;
@@ -489,6 +489,11 @@ padding: 2rem !important;
   background-color: green;
   outline: 1px solid darkgreen;
   border-radius: 8px;
+}
+
+.reels{
+  height: 700px;
+  border-radius: 10px;
 }
 
 
