--- a/css/custom.css
+++ b/css/custom.css
@@ -499,3 +499,27 @@ padding: 2rem !important;
 
 
 /* responsive */
+
+/* Mobile First Styles */
+@media only screen and (max-width: 600px) {
+  .small-device-responsive{
+    display: none;
+  }
+
+  h3, .h3 {
+    font-size:medium;
+  }
+
+}
+
+/* Tablet Styles */
+@media only screen and (min-width: 601px) and (max-width: 900px) {
+  
+
+}
+
+/* Desktop Styles */
+@media only screen and (min-width: 901px) {
+ 
+
+}
