--- a/css/custom.css
+++ b/css/custom.css
@@ -252,6 +252,7 @@
     position: relative;
     display: block;
     box-sizing: content-box;
+    margin-top: 5px;
     /* width: 64px; */
     /* height: 26px;
     border-radius: 100%; */
@@ -289,7 +290,7 @@
     border-left: 16px solid #FFFFFF;
     border-top: 11px solid transparent;
     border-bottom: 11px solid transparent; */
-    
+
 }
 
 .appointment-form{
@@ -350,7 +351,7 @@ border-radius: 5px;
 }
 
 .small-device{
-  margin-right: 22px;
+  /* margin-right: 22px; */
   font-size: 21px;
   margin-top: 5px;
 }
@@ -497,6 +498,10 @@ padding: 2rem !important;
   border-radius: 10px;
 }
 
+.bridal-text{
+  font-size: x-large;
+}
+
 
 
 /* responsive */
@@ -511,6 +516,19 @@ padding: 2rem !important;
     font-size:medium;
   }
 
+  .hero-video{
+    height: 100%;
+  }
+  /* .h-100{
+    height: 100%;
+    
+  }
+
+  .w-100 {
+    
+    width:0%;
+  } */
+
 }
 
 /* Tablet Styles */
@@ -522,5 +540,18 @@ padding: 2rem !important;
 /* Desktop Styles */
 @media only screen and (min-width: 901px) {
  
+  /* .h-100{
+    height: 0%;
+   
+  }
+
+  .w-100 {
+    width: 100% !important;
+  } */
+
+  .hero-video{
+    width: 100%;
+  }
+
 
 }
