--- a/css/custom.css
+++ b/css/custom.css
@@ -502,6 +502,13 @@ padding: 2rem !important;
   font-size: x-large;
 }
 
+.book-appointment-text{
+  width: 87%;
+  height: 39px;
+  padding: 6px !important;
+  border-radius: 50px;
+}
+
 
 
 /* responsive */
@@ -519,15 +526,13 @@ padding: 2rem !important;
   .hero-video{
     height: 100%;
   }
-  /* .h-100{
-    height: 100%;
-    
+  
+  .ornaments-text{
+    width: 97%;
+    text-align: center;
+
   }
 
-  .w-100 {
-    
-    width:0%;
-  } */
 
 }
 
