--- a/css/tabmenu.css
+++ b/css/tabmenu.css
@@ -49,10 +49,10 @@
       user-select: none;
       transition: background-color .3s ease;
       &:hover {
-        background-color: var(--first-color);
+        background-color: #f49805;
       }
       &.active {
-        background-color: var(--second-color);
+        background-color: #EDB354;
       }
     }
   }
