--- a/css/custom.css
+++ b/css/custom.css
@@ -546,6 +546,19 @@ padding: 2rem !important;
 
   }
 
+  .back-to-top-icon{
+    position: fixed; 
+    bottom: 25px;
+    right: 33px;
+    z-index: 99;
+  }
+  .back-to-top-whatsapp{
+    position: fixed; 
+    bottom: 81px;
+    right: 34px;
+    z-index: 1001;
+  }
+
 
 }
 
