--- a/css/tabmenu.css
+++ b/css/tabmenu.css
@@ -52,7 +52,7 @@
         background-color: #f49805;
       }
       &.active {
-        background-color: #EDB354;
+        background-color: #f49805;
       }
     }
   }
